// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast Widget TagsSelect should render TagsSelect field (tags properties) 1`] = `
<Connect(TagsSelect)
  caseInsensitive={false}
  description="Name of the tag. Keep it simple, a short 1 word tag is the best. The tag names are case sensitive."
  multiple={false}
  onChange={[Function]}
  options={Array []}
  type="tags-select"
  value="tag"
/>
`;

exports[`ast Widget TagsSelect should render multi TagsSelect field (addTags action) 1`] = `
<Connect(TagsSelect)
  caseInsensitive={false}
  description=""
  multiple={true}
  onChange={[Function]}
  options={Array []}
  type="tags-select"
  value="hello, world, !"
/>
`;

exports[`ast Widget should handle change AST ExpressionArray value 1`] = `
Object {
  "calls": Array [
    Array [
      Immutable.List [
        "body",
        0,
        "test",
        "arguments",
        1,
        "elements",
],
      Array [
        Object {
          "raw": "'hello'",
          "type": "Literal",
          "value": "hello",
        },
        Object {
          "raw": "'you!'",
          "type": "Literal",
          "value": "you!",
        },
      ],
      "UPDATE",
    ],
  ],
  "instances": Array [
    Object {
      "modifyCodeAST": [Function],
    },
  ],
}
`;

exports[`ast Widget should handle change AST Literal value 1`] = `
Object {
  "calls": Array [
    Array [
      Immutable.List [
        "body",
        0,
        "test",
        "arguments",
        1,
        "elements",
],
      "hello you!",
      "UPDATE",
    ],
  ],
  "instances": Array [
    Object {
      "modifyCodeAST": [Function],
    },
  ],
}
`;

exports[`ast Widget should render DatetimeSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <DatetimePicker
    datetime="2018-03-28T21:59:32.580209"
    onChange={[Function]}
  />
</div>
`;

exports[`ast Widget should render InputField (eq operator) 1`] = `
<InputField
  caseInsensitive={false}
  inline={false}
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value="hello world!"
/>
`;

exports[`ast Widget should render RichFieldWithVariables 1`] = `
<RichFieldWithVariables
  allowExternalChanges={true}
  onChange={[Function]}
  placeholder=""
  required={false}
  rows="8"
  type="text"
  value={
    Object {
      "html": "hello my good lad",
      "text": "foo bar",
    }
  }
  variableTypes={
    Array [
      "current_user",
      "ticket.customer",
      "shopify",
      "recharge",
    ]
  }
/>
`;

exports[`ast Widget should render TimedeltaSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <TimedeltaPicker
    onChange={[Function]}
    value="1d"
  />
</div>
`;

exports[`ast Widget should render case-insensitive MultiSelectField (containsAll operator) 1`] = `
<MultiSelectField
  allowCustomValues={true}
  caseInsensitive={true}
  onChange={[Function]}
  options={Array []}
  plural="words"
  singular="word"
  style={
    Object {
      "display": "inline-block",
      "paddingBottom": "2px",
    }
  }
  tagColor="#0275d8"
  values={
    Array [
      "hello",
      "world!",
    ]
  }
/>
`;
